--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Noxhes de Pl@cer</title>
+<title>Rich Service</title>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "sodoma70", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 
-<meta content='https://imgur.com/usURuQn.png' property='og:image'/>
+<meta content='https://i.postimg.cc/L64fGJsV/screenshot-124.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -21,11 +21,11 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="https://i.imgur.com/BSAW62p.png" alt="">
+<img src="https://i.imgur.com/6MaHcMc.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Vamos a domimicilio por noches por horas, a Motel a todos lados quieres ver mi catalogo fotos desnudita?.</div>
+We go out to homes at night for hours, everywhere in the city. Do you want to see my catalog?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Si
@@ -37,7 +37,7 @@ No
 </div>
 <div class="step-item" style="display: none;">
 <div class="question-title ">
-Tienes al menos 20 años? Nosotras somos un club de Damas de Compañia, Presiona SI y miranos en vivo Mastubandonos..
+We are fascinated by anal sex, would you be capable?
 </div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
@@ -50,9 +50,7 @@ No
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-Para el Registro Gratis y <script type='text/javascript'>document.write(unescape('%43%30%47%45%52'))</script> con cualquier Chica, presione el boton ENTRAR Abajo, y haga su registro gratis en nuestro sitio privado previa cita, 
-Estamos en vivo, con muchas <script type='text/javascript'>document.write(unescape('%67%61%6E%61%73%20%72%69%63%6F%20%61%6E%61%6C%2C%20%76%61%67%69%6E%61%6C%2C%20%74%72%69%6F%73%20%79%20%6D%61%73'))</script>.... </div>
-<p>
+For Free Registration and to fuck with any Girl, press the ENTER button below, and make your free registration on our private site by appointment. We are live, eager to fuck.<p>
 <b style="color: red;">
 </b>
 </p>
