--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ No
 </div>
 </div>
 <div class="step-item" style="display: none;">
-<div class="question-title ">
-We are fascinated by anal sex, would you be capable?
+<div class="question-title ">We are fascinated by anal sex, would you be capable?
 </div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
